--- a/Insurance-app-main/src/login/register/login.css
+++ b/Insurance-app-main/src/login/register/login.css
@@ -1,5 +1,5 @@
 .login-container{
-    background-image: url('C:\Users\NASTAF_6\my-app\react-app\public\register.jpg');
+    background-image: url('C:\task\Validation-project\Insurance-app-main\public\bg-2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
