--- a/Insurance-app-main/src/Login.css
+++ b/Insurance-app-main/src/Login.css
@@ -1,5 +1,5 @@
 .login-container{
-    background-image: url('../../../public/bg-2.jpg');
+    background-image: url('../public/bg-2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
