--- a/Insurance-app-main/src/Register.css
+++ b/Insurance-app-main/src/Register.css
@@ -1,5 +1,5 @@
 .register-container{
-    background-image: url("../../../public/bg-2.jpg");
+    background-image: url("../public/bg-2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
