--- a/Insurance-app-main/src/Adminpage.css
+++ b/Insurance-app-main/src/Adminpage.css
@@ -78,3 +78,11 @@
     border-radius: 5px;
     padding: 10px;
 }
+
+.logout-btn{
+    background-color: white;
+    margin-left: 1050px;
+    border-radius: 5px;
+    padding: 10px;
+    width: 100px;
+}
