--- a/Insurance-app-main/src/Userdata.css
+++ b/Insurance-app-main/src/Userdata.css
@@ -12,16 +12,18 @@
 main{
     margin-left: 20%;
     padding: 20px;
-    background:linear-gradient(60deg,rgba(9,9,121,1) 20%,rgba(0,212,255,1)60%,rgba(9,9,121,1)100%);
-    height: 100%;
+    background-color: skyblue;
+    height: 100vh;
 }
 
 aside a{
     text-decoration: none;
-    color: white;
+  
 }
 
 .userdata-btn{
   color: white;
   cursor: pointer;
+  background: none;
+  border: none;
 }
