--- a/Insurance-app-main/src/Adminpage.css
+++ b/Insurance-app-main/src/Adminpage.css
@@ -5,6 +5,14 @@
     border-radius: 7px;
 }
 
+.adminpage-header{
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(91, 171, 241);
+    margin-left: 20%;
+    margin-right: 1%;
+}
+
 .admin-table{
     width: 70%;
 }
@@ -81,7 +89,6 @@
 
 .logout-btn{
     background-color: white;
-    margin-left: 1050px;
     border-radius: 5px;
     padding: 10px;
     width: 100px;
