--- a/Insurance-app-main/src/Userdata.css
+++ b/Insurance-app-main/src/Userdata.css
@@ -12,7 +12,7 @@
 main{
     margin-left: 20%;
     padding: 20px;
-    background-color: skyblue;
+    background:linear-gradient(90deg,skyblue 20%,rgb(34, 122, 173) 100%);
     height: 100vh;
 }
 
