--- a/Insurance-app-main/src/Homepage.css
+++ b/Insurance-app-main/src/Homepage.css
@@ -40,5 +40,19 @@
     color: rgb(5, 5, 52);
     font-style: italic;
     text-shadow: 1px 2px 3px whitesmoke;
-    
+}
+
+.section-text{
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.section-btn{
+    background-color: blueviolet;
+    padding: 10px;
+    width: 10%;
+    font-size: 18px;
+    border-radius: 10px;
+    border: none;
+    color: white;
 }
