--- a/Insurance-app-main/src/Homepage.css
+++ b/Insurance-app-main/src/Homepage.css
@@ -48,7 +48,7 @@
 }
 
 .section-btn{
-    background-color: blueviolet;
+    background-color: rgb(38, 3, 72);
     padding: 10px;
     width: 10%;
     font-size: 18px;
