--- a/Insurance-app-main/src/Homepage.css
+++ b/Insurance-app-main/src/Homepage.css
@@ -3,6 +3,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
+    font-family: 'Poppins', sans-serif
 }
 
 .homepage-header{
@@ -11,7 +12,6 @@
     color: white;
     font-size: 23px;
     font-weight: bold;
-    font-style: italic;
     font-variant:small-caps;
 }
 
@@ -23,6 +23,7 @@
 
 .name{
     color: rgb(2, 2, 24);
+    font-weight: bold;
 }
 
 @keyframes scrollText {
@@ -31,16 +32,15 @@
 }
 
 .homepage-section{
-   width: 50%;
-   height: 50%;
-   justify-content: center;
+   width: 60%;
+   height: 70%;
+   align-content: center;
+   justify-items: center;
 }
 
 .section-header{
     font-weight: bold;
     color: rgb(5, 5, 52);
-    font-style: italic;
-    text-shadow: 1px 2px 3px whitesmoke;
 }
 
 .section-text{
@@ -51,9 +51,15 @@
 .section-btn{
     background-color: rgb(38, 3, 72);
     padding: 10px;
-    width: 10%;
+    width: 150px;
     font-size: 18px;
     border-radius: 10px;
     border: none;
     color: white;
+    cursor: pointer;
+}
+
+.section-btn:hover{
+    background-color: rgba(38, 3, 72, 0.3);
+    border: 2px inset white;
 }
