--- a/Insurance-app-main/src/User.css
+++ b/Insurance-app-main/src/User.css
@@ -44,7 +44,7 @@
     text-align: center;
 }
 
-table {
+.usertable {
     border: 2px solid black;
     border-collapse: collapse;
     margin: auto;
@@ -53,7 +53,7 @@ table {
     position: fixed;
 }
 
-th, td {
+.tablerow {
     border: 1px solid black;
     padding: 10px;
     text-align: center;
