Saved local changes before pulling

--- a/Insurance-app-main/src/User.css
+++ b/Insurance-app-main/src/User.css
@@ -1,4 +1,4 @@
-/* Updated Styles */
+/* Updated Styles
 
 .user-btn {
     background-color: green;
@@ -98,7 +98,6 @@ th, td {
 .confirm-btn, .cancel-btn {
     padding: 10px 20px;
     margin: 5px;
-    border: none;
     cursor: pointer;
     font-size: 16px;
     border-radius: 5px;
@@ -127,4 +126,4 @@ th, td {
 {
     display:flex;
 }
-
+  */
