Saved local changes before pulling

--- a/Insurance-app-main/src/User.css
+++ b/Insurance-app-main/src/User.css
@@ -1,4 +1,4 @@
-/* Updated Styles
+Updated Styles
 
 .user-btn {
     background-color: green;
@@ -126,4 +126,4 @@
 {
     display:flex;
 }
-  */
+ 
