--- a/Insurance-app-main/src/User.css
+++ b/Insurance-app-main/src/User.css
@@ -16,7 +16,7 @@
 }
 
 .user-containerform {
-    background: linear-gradient(90deg, black 20%,darkgray 100%);
+    background: linear-gradient(90deg,skyblue 20%,darkblue 100%);
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -30,6 +30,7 @@
     justify-content: flex-end;
     width: 100%;
     padding: 20px;
+    color: white;
 }
 
 .userlogout-btn {
@@ -44,16 +45,17 @@
     text-align: center;
 }
 
-.usertable {
+table {
     border: 2px solid black;
     border-collapse: collapse;
     margin: auto;
+    margin-top: 150px;
     width: 60%;
     background-color: white;
     position: fixed;
 }
 
-.tablerow {
+th,td {
     border: 1px solid black;
     padding: 10px;
     text-align: center;
