--- a/Insurance-app-main/src/User.css
+++ b/Insurance-app-main/src/User.css
@@ -1,4 +1,4 @@
-Updated Styles
+/* Updated Styles
 
 .user-btn {
     background-color: green;
@@ -138,4 +138,4 @@ th,td {
     font-size: 16px;
     border-radius: 5px;
 }
- 
+  */
