--- a/Insurance-app-main/src/Adminpage.css
+++ b/Insurance-app-main/src/Adminpage.css
@@ -1,9 +1,8 @@
 .admin-btn{
-    background-color: #333;
+    background-color: rgb(27, 27, 109);
     color: white;
     width: 150px;
     border-radius: 7px;
-    margin-top: 150px;
 }
 
 .adminpage-header{
@@ -14,20 +13,37 @@
     margin-right: 1%;
 }
 
+.admin-head{
+    font-weight: bold;
+}
+
 .admin-table{
     position: relative;
     border-collapse: collapse;
     margin: auto;
     width: 50%;
-   left:10%;
+    left:5%;
 }
 
 .admin-table th,td{
     padding: 10px;
 }
 
+.admin-table tr:nth-child(odd){
+    background-color:#bbdefb;
+}
+
+.admin-table th{
+    background-color: #0d47a1;
+    color: white;
+}
+
+.admin-table tr:hover{
+    background-color: #64b5f6;
+}
+
 .admin-btn:hover{
-    background-color: #333;
+    background-color: rgb(24, 24, 230);
 }
 
 .admin-header{
@@ -97,8 +113,70 @@
 }
 
 .logout-btn{
-    background-color: white;
     border-radius: 5px;
     padding: 10px;
     width: 100px;
+    background-color: #0d47a1;
+    color: white;
 }
+
+.logout-btn:hover{
+    background-color: white;
+    color: black;
+}
+
+.admin-boxhover{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 11%;
+    right: 0;
+}
+
+.admin-confirmbox{
+    display: flex;
+    background-color: white;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    border-radius: 15px;
+    background-color: #b6b4b4;
+    padding: 10px;
+}
+
+.-admin-confirmbox p {
+    font-size: 1.2rem;
+    font-weight: bold;
+    /* margin-bottom: 20px;
+    margin-left: 30px; */
+}
+
+.admin-confirm-btn, .admin-cancel-btn {
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+.admin-confirm-btn {
+    background-color: red;
+    color: white;
+}
+
+.admin-cancel-btn {
+    background-color: gray;
+    color: black;
+}
+
+.admin-confirm-btn:hover {
+    background-color:green;
+  
+}
+
+.admin-cancel-btn:hover {
+    background-color: darkred;
+    color: white;
+}
+
