--- a/Insurance-app-main/src/Userdata.css
+++ b/Insurance-app-main/src/Userdata.css
@@ -9,11 +9,14 @@
     padding: 7px;
 }
 
-main{
+.userdata-container{
     margin-left: 20%;
     padding: 20px;
-    /* background:linear-gradient(90deg,skyblue 20%,rgb(34, 122, 173) 100%); */
     height: 100vh;
+    overflow-y: scroll;
+    display: flex;
+    justify-content: center;
+    align-items: center
 }
 
 aside a{
@@ -26,8 +29,4 @@ aside a{
   cursor: pointer;
   background: none;
   border: none;
-}
-
-.userdata-container{
-    overflow-y: scroll;
 }
