--- a/Insurance-app-main/src/Users.css
+++ b/Insurance-app-main/src/Users.css
@@ -17,8 +17,9 @@
     position: relative;
     border-collapse: collapse;
     margin: auto;
-    width: 50%;
-    left:5%;
+    width: 100%;
+    padding: 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .users-table th,td{
