--- a/Insurance-app-main/src/Userdata.css
+++ b/Insurance-app-main/src/Userdata.css
@@ -1,12 +1,13 @@
 .admin-slidebar{
-    background:linear-gradient(90deg,rgba(9,9,121,1) 20%,rgba(0,212,255,1)100%);
+    /* background:linear-gradient(90deg,rgba(9,9,121,1) 20%,rgba(0,212,255,1)100%); */
+    background-color: rgb(3, 3, 69);
     color: white;
     height:100%;
     width: 20%;
     position: fixed;
     left: 0;
     top: 0;
-    padding: 7px;
+    padding: 10px;
 }
 
 .userdata-container{
@@ -19,14 +20,13 @@
     align-items: center
 }
 
-aside a{
-    text-decoration: none;
-  
-}
-
 .userdata-btn{
   color: white;
   cursor: pointer;
   background: none;
   border: none;
 }
+
+.userdata-container::-webkit-scrollbar {
+    display: none;
+  }
