--- a/Insurance-app-main/src/Adminpage.css
+++ b/Insurance-app-main/src/Adminpage.css
@@ -8,7 +8,7 @@
 .adminpage-header{
     display: flex;
     justify-content: space-between;
-    background:linear-gradient(90deg,rgba(9,9,121,1) 20%,rgba(0,212,255,1)100%);
+    background-color:darkblue;
     color: white;
     margin-left: 20%;
     margin-right: 1%;
@@ -117,7 +117,7 @@
     border-radius: 5px;
     padding: 10px;
     width: 100px;
-    background-color: #0d47a1;
+    background-color:skyblue;
     color: white;
 }
 
