--- a/Insurance-app-main/src/Users.css
+++ b/Insurance-app-main/src/Users.css
@@ -54,8 +54,7 @@
 }
 
 .toggle{
-    background:linear-gradient(90deg,rgba(9,9,121,1) 20%,rgba(0,212,255,1)100%);
-    margin-left: 20%;
-    margin-right: 1%;
+    background-color: #3181c7;
     color: white;
+    left: 20%;
 }
