--- a/Insurance-app-main/src/Userdata.css
+++ b/Insurance-app-main/src/Userdata.css
@@ -1,32 +1,34 @@
 .admin-slidebar{
-    /* background:linear-gradient(90deg,rgba(9,9,121,1) 20%,rgba(0,212,255,1)100%); */
-    background-color: rgb(3, 3, 69);
+    background:linear-gradient(90deg,rgba(9,9,121,1) 20%,rgba(0,212,255,1)100%);
     color: white;
     height:100%;
     width: 20%;
     position: fixed;
     left: 0;
     top: 0;
-    padding: 10px;
+    padding: 7px;
 }
-.userdata-container{
+
+main{
     margin-left: 20%;
     padding: 20px;
     height: 100vh;
-    overflow-y: scroll;
-    display: flex;
-    justify-content: center;
-    align-items: center
+}
+
+  
+
+aside a{
+    text-decoration: none;
+  
 }
 
 .userdata-btn{
-  padding: 10px;
   color: white;
   cursor: pointer;
   background: none;
   border: none;
 }
 
-.userdata-container::-webkit-scrollbar {
-    display: none;
-  }
+.userdata-container{
+    overflow-y: scroll;
+}
