--- a/Insurance-app-main/src/Users.css
+++ b/Insurance-app-main/src/Users.css
@@ -14,12 +14,13 @@
 }
 
 .users-table{
+   
     position: relative;
     border-collapse: collapse;
     margin: auto;
-    width: 100%;
-    padding: 20px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    width: 90%;
+    left:3%;
+    margin-top: 100px;
 }
 
 .users-table th,td{
@@ -54,7 +55,8 @@
 }
 
 .toggle{
-    background-color: #3181c7;
+    background:linear-gradient(90deg,rgba(9,9,121,1) 20%,rgba(0,212,255,1)100%);
+    margin-left: 20%;
+    margin-right: 1%;
     color: white;
-    left: 20%;
 }
