--- a/Insurance-app-main/src/User.css
+++ b/Insurance-app-main/src/User.css
@@ -130,3 +130,43 @@
     background-color: darkred;
     color: white;
 }
+
+.admin-header {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 15px;
+    margin-left: 200px;
+}
+
+.upload-button1, .upload-button2 {
+    font-size: 25px;
+    cursor: pointer;
+    background: none;
+}
+
+.file-label {
+    padding: 8px 12px;
+    font-size: 14px;
+}
+
+.file-input {
+    display: none;
+}
+
+.file-label {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: bold;
+    transition: background 0.3s;
+}
+
+.admin-headerpage
+{
+    display: flex;
+    justify-content: center;
+}
