--- a/Insurance-app-main/src/Adminpage.css
+++ b/Insurance-app-main/src/Adminpage.css
@@ -10,7 +10,8 @@
     justify-content: space-between;
     background-color:darkblue;
     color: white;
-    left: 20%;
+    margin-left: 20%;
+    margin-right: 1%;
 }
 
 .admin-head{
@@ -195,11 +196,7 @@
         color: white;
         cursor: pointer;
         width: 25%;
-}
-
-::-webkit-scrollbar {
-    display: none;
-}
+      }
       
      
       
