--- a/Insurance-app-main/src/Users.css
+++ b/Insurance-app-main/src/Users.css
@@ -56,6 +56,7 @@
 
 .toggle{
     background:linear-gradient(90deg,rgba(9,9,121,1) 20%,rgba(0,212,255,1)100%);
-    left: 20%;
+    margin-left: 20%;
+    margin-right: 1%;
     color: white;
 }
