--- a/Insurance-app-main/src/Adminpage.css
+++ b/Insurance-app-main/src/Adminpage.css
@@ -120,18 +120,9 @@
     display: block;
 }
 
-.logout-btn{
-    border-radius: 5px;
-    padding: 10px;
-    width: 100px;
-    background-color:skyblue;
-    color: white;
-}
 
-.logout-btn:hover{
-    background-color: white;
-    color: black;
-}
+
+
 
 .admin-boxhover{
     display: flex;
@@ -205,8 +196,38 @@
     display: none;
 }
      
-.logout-btn .role{
+.profileadmin {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color:darkblue; /* Dark navy background */
+    padding: 10px 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    color: #fff;
+    font-size: 18px;
+  }
+  
+  .profileadmin h3 {
+    margin: 0;
     font-size: 20px;
-    position: relative;
-    right: 10%;
-}
+    font-weight: bold;
+  }
+  
+  .logout-btn {
+ 
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s ease;
+    font-size: 18px;
+    background-color: darkblue;
+  }
+  
+  .logout-btn:hover {
+ 
+    transform: scale(1.05);
+  }
+  
