--- a/Insurance-app-main/src/Userdata.css
+++ b/Insurance-app-main/src/Userdata.css
@@ -1,25 +1,18 @@
 .admin-slidebar{
-    background:linear-gradient(90deg,rgba(9,9,121,1) 20%,rgba(0,212,255,1)100%);
+    background:rgb(8, 8, 73);
     color: white;
     height:100%;
     width: 20%;
     position: fixed;
     left: 0;
-    top: 0;
-    padding: 7px;
+    top: 9%;
+    /* padding: 7px; */
 }
 
-main{
+.userdata-container{
     margin-left: 20%;
-    padding: 20px;
+    /* padding: 20px; */
     height: 100vh;
-}
-
-  
-
-aside a{
-    text-decoration: none;
-  
 }
 
 .userdata-btn{
@@ -31,4 +24,8 @@ aside a{
 
 .userdata-container{
     overflow-y: scroll;
+}
+
+.userdata-head{
+    font-family: 'Poppins',sans-serif;
 }
