--- a/Insurance-app-main/src/Adminpage.css
+++ b/Insurance-app-main/src/Adminpage.css
@@ -116,8 +116,6 @@
     display: none;
 }
 
-
-/** User Styles **/
 .users-btn {
     background-color: rgb(27, 27, 109);
     color: white;
@@ -156,6 +154,12 @@
 
 .users-table tr:hover{
     background-color: #64b5f6;
+}
+
+.users-table tbody tr:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 5px 15px rgba(0, 82, 204, 0.4);
+    background: rgba(30, 60, 114, 0.9); color: white;
 }
 
 .edit-btn, .delete-btn {
