--- a/Insurance-app-main/src/Users.css
+++ b/Insurance-app-main/src/Users.css
@@ -44,13 +44,14 @@
     background-color: #0d47a1;
     color: white;
 }
-
-.users-table tr:hover{
-    background-color: #64b5f6;
-}
-
 .users-btn:hover{
     background-color: rgb(24, 24, 230);
+}
+
+.users-table tbody tr:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 5px 15px rgba(0, 82, 204, 0.4);
+    background: rgba(30, 60, 114, 0.9); color: white;
 }
 
 
