--- a/Insurance-app-main/src/Userdata.css
+++ b/Insurance-app-main/src/Userdata.css
@@ -10,10 +10,6 @@
 
 .userdata-container{
     margin-left: 20%;
-<<<<<<< HEAD
-=======
- 
->>>>>>> 7e82e053e0c1ba25c34bf2049e6cf6814610c6e9
     height: 100vh;
 }
 
@@ -36,6 +32,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 5px;
+    /* box-shadow: 0px 3px 5px whitesmoke; */
 }
 
 .userdata-container{
