--- a/Insurance-app-main/src/User.css
+++ b/Insurance-app-main/src/User.css
@@ -1,24 +1,7 @@
 .user-containerform {
-    /* position: relative; */
-    /* width: 100%; */
     height: 100vh;
     overflow-y: scroll;
-    /* background: rgba(0, 0, 0, 0.7); */
-    /* min-height: fit-content; */
 }
-
-/* .user-containerform::before {
-    content: "";
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgb(6, 6, 70);
-    filter: blur(10px);
-    z-index: -1;
-} */
-
 
 .user-profile {
     display: flex;
@@ -26,35 +9,29 @@
     width: 100%;
     padding: 20px;
     gap: 10px;
-    background-color: gainsboro;
+    background:rgb(239, 238, 238);
     position: fixed;
     left: 0;
     z-index: 1000;
-    /* box-shadow: 5px 5px 5px black; */
 }
 
 .userlogout-btn {
     position: relative;
     right: 5%;
-    /* top: 20px; */
     font-size: 20px;
     display: flex;
     align-items: center;
     cursor: pointer;
     background: none;
     border: none;
+    color: black;
 }
 
 .user-table {
-    /* border: 1px solid black; */
     position: relative;
     border-collapse:collapse;
-    /* border-spacing: 0;
-    overflow: hidden; */
     margin: auto;
     width: 80%;
-    /* box-shadow: 5px 5px 5px black; */
-    /* border-radius: 10px; */
     top: 15%;
 }
 
@@ -83,81 +60,37 @@
 
 .user-table tbody tr{
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    /* box-shadow: 0px 1px 2px #08589d; */
 }
 
 .user-table tbody td{
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    padding: 10px;
+    /* border-bottom: 1px solid rgba(255, 255, 255, 0.2); */
+    /* border-bottom: 1px solid #08589d; */
+    padding: 15px;
 }
 
 .user-table tbody tr:hover {
     transform: translateY(-5px);
     box-shadow: 0px 5px 15px rgba(0, 82, 204, 0.4);
-    background: rgba(30, 60, 114, 0.9); color: white;
+    background: rgba(30, 60, 114, 0.9);
+     color: white;
 }
 
 .user-btn {
-    background-color: skyblue;
-    color:black;
+    background-color: rgb(2, 2, 78);
+    color:white;
     width: 150px;
     border-radius: 7px;
+}
+
+.user-btn:hover{
+    background: rgba(30, 60, 114, 0.9);
 }
 
 .userbtn{
     position: relative;
     top: 15%;
 }
-
-/* .user-boxhover {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 11%;
-    right: 0;
-} */
-
-/* .user-confirmbox {
-    display: flex;
-    background-color: #b6b4b4;
-    flex-direction: column;
-    align-items: center;
-    width: 300px;
-    border-radius: 15px;
-    padding: 10px;
-} */
-/* 
-.user-confirmbox p {
-    font-size: 1.2rem;
-    font-weight: bold;
-} */
-
-/* .user-confirm-btn, .user-cancel-btn {
-    padding: 10px 20px;
-    margin: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    border-radius: 5px;
-} */
-
-/* .user-confirm-btn {
-    background-color: red;
-    color: white;
-}
-
-.user-cancel-btn {
-    background-color: gray;
-    color: black;
-}
-
-.user-confirm-btn:hover {
-    background-color: green;
-}
-
-.user-cancel-btn:hover {
-    background-color: darkred;
-    color: white;
-} */
 
 .admin-header {
     display: flex;
@@ -218,21 +151,6 @@
     transition: background 0.3s;
 }
 
-/* .admin-headerpage {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px 20px;
-    color: white;
-}
-.admin-headerpage h3 {
-    flex-grow: 1;
-    text-align: center;
-    margin-left: 300px;
-    font-size: 22px;
-    font-weight: bold;
-} */
-
 .admin-header {
     display: flex;
     align-items: center;
@@ -244,4 +162,23 @@
     justify-content: center;
     position: relative;
     top: 15%;
+}
+
+.userheader{
+    position: absolute;
+    left: 2%;
+    font-variant: small-caps;
+    font-size: 2rem;
+    font-weight: bold;
+    color:#023265;
+    letter-spacing: 3px;
+}
+
+.head{
+    font-weight: 700;
+}
+
+.username{
+    color: black;
+    font-weight: bold;
 }
