--- a/Insurance-app-main/src/Userdata.css
+++ b/Insurance-app-main/src/Userdata.css
@@ -1,6 +1,6 @@
 .admin-slidebar{
-    background:rgb(8, 8, 73);
-    color: white;
+    background:rgb(239, 238, 238);
+    /* color: white; */
     height:100%;
     width: 20%;
     position: fixed;
@@ -16,7 +16,7 @@
 }
 
 .userdata-btn{
-  color: white;
+  /* color: white; */
   cursor: pointer;
   background: none;
   border: none;
@@ -42,6 +42,6 @@
     overflow-y: scroll;
 }
 
-.userdata-head{
-    font-family: 'Poppins',sans-serif;
+.user-list{
+    list-style: none;
 }
