--- a/Insurance-app-main/src/UserDialog.css
+++ b/Insurance-app-main/src/UserDialog.css
@@ -41,7 +41,7 @@
     padding: 10px;
     border-radius: 10px;
     width: 30%;
-    background-color:  #28a745;
+    background-color:  #0b531c;
     border: none;
     cursor: pointer;
     color: white;
@@ -57,7 +57,7 @@
     padding: 10px;
     border-radius: 10px;
     width: 30%;
-    background-color:  #dc3545;
+    background-color:  #5b060f;
     color: white;
     border: none;
     cursor: pointer;
