--- a/Insurance-app-main/src/Userdata.css
+++ b/Insurance-app-main/src/Userdata.css
@@ -16,27 +16,19 @@
 }
 
 .userdata-btn{
-  /* color: white; */
   cursor: pointer;
   background: none;
   border: none;
   font-size: 18px;
-  width: 80%;
-  padding: 5px;
-  border-bottom:1px solid #08589d;
-  border-top:1px solid #08589d;
-  border-radius: 5px;
-  gap: 10px;
-  box-shadow: 0px 3px 5px whitesmoke;
+  width: 100%;
+  padding: 7px;
+  gap: 20px;
 }
 
-.userdata-btn:hover{
-    background: #08589d;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 5px;
-    /* box-shadow: 0px 3px 5px whitesmoke; */
-}
+/* .userdata-btn:hover{
+    background: #054c8b;
+    color: white;
+} */
 
 .userdata-container{
     overflow-y: scroll;
@@ -45,3 +37,10 @@
 .user-list{
     list-style: none;
 }
+
+.dashboard-icon:hover{
+    font-size: 20px;
+    color:rgb(2, 2, 70);
+    font-weight: bold;
+}
+
