--- a/Insurance-app-main/src/Users.css
+++ b/Insurance-app-main/src/Users.css
@@ -1,58 +1,50 @@
 .users-btn {
-    background-color: rgb(27, 27, 109);
-    color: white;
-    width: 150px;
-    border-radius: 7px;
-    padding: 10px;
-    transition: background 0.3s ease-in-out;
+    background-color: #023265;
+    color:white;
+    width: 18%;
+    border-radius: 50px;
+    position: relative;
+    right: 20%;
 }
 
 .users-btn:hover {
-    background-color: rgb(24, 24, 230);
-    transform: scale(1.05);
-}
-
-.admin-head {
-    font-family: 'Orbitron', sans-serif;  /* Futuristic Font */
-    font-weight: 700;
-    font-style: oblique;
-    font-size: 70px;
-    text-transform: uppercase;
-    text-align: center;
-    animation: glow 1.5s infinite alternate ease-in-out;
-    color:darkblue;
+    background: rgb(1, 1, 99);
 }
 
 .users-table{
     position: relative;
-    border-collapse: collapse;
+    border-collapse:collapse;
     margin: auto;
-    width: 90%;
-    left:3%;
-    margin-top: 100px;
-}
-
-.users-table th,td{
-    padding: 10px;
-}
-
-.users-table tr:nth-child(odd){
-    background-color:#bbdefb;
+    width: 80%;
+    top: 15%;
+    box-shadow: 1px 7px 15px gainsboro;
 }
 
 .users-table th{
-    background-color: #0d47a1;
+    padding: 12px;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    /* background-color: rgb(138, 137, 137); */
+    background-color: #023265;
     color: white;
+    border-bottom: 1px solid gainsboro;
 }
 
-.users-table tr:hover{
-    background-color: #64b5f6;
+
+.users-table td{
+    font-size: 17px;
+    font-weight: 200;
+    font-family: "Poppins",sans-serif;
 }
 
-.users-btn:hover{
-    background-color: rgb(24, 24, 230);
+.users-table tbody td{
+    padding: 20px;
 }
 
+.users-table  tbody tr:hover{
+    background:  rgb(221, 220, 220);
+}
 
 .edit-btn, .delete-btn {
     border: none;
@@ -63,7 +55,7 @@
 }
 
 .edit-btn {
-    color: green;
+    color: rgb(2, 103, 2);
 }
 
 .delete-btn {
@@ -86,24 +78,7 @@
     width: 100%;
     height: 70px;
 }
-.trustasure-title {
-    font-family: 'Orbitron', sans-serif;
-    font-size: 30px;
-    font-weight: 700;
-    letter-spacing: 2px;
-    text-align: center;
-}
 
-.admin-head {
-    font-family: 'Orbitron', sans-serif;  /* Futuristic Font */
-    font-weight: 700;
-    font-style: oblique;
-    font-size: 70px;
-    text-transform: uppercase;
-    text-align: center;
-    animation: glow 1.5s infinite alternate ease-in-out;
-    color:darkblue;
-}
 .admin-header-container {
     display: flex;
     align-items: center;
@@ -145,7 +120,7 @@
   }
   
   .upload-button3{
-    background-color: #2ecc71; 
+    background-color: #128e46; 
   }
   
   .upload-button4{
@@ -185,9 +160,6 @@
     transition: background 0.3s;
 }
 
-
-
-
 .file-label:hover {
     background-color: #0056b3;
 }
@@ -196,5 +168,9 @@
     display: block;
 }
 
-
-
+.users-table thead tr .tablerow{
+    height: 75px;
+    background-color: white;
+    color: black;
+    font-size: 25px;
+}
